# segment_spmm

./: .gitignore  CMakeLists.txt
app/: dummy_run.cpp  run_dram_spmm_csr.cpp  run_spmm_csr.cpp
include/: spmm_csr.h
lib/include/: RunHelper.h  dense_matrix.h  mt_io.h  sparse_matrix.h  utils.h
lib/src/: RunHelper.cpp  dense_matrix.cpp  mt_io.cpp  sparse_matrix.cpp
local_stuff/spmm/: run00.spmm.sh
local_stuff/spmm/note/: psudocode.spmm.window.v0.cpp
src/: spmm_csr.cpp
